[Mac] Fix Animation Issue With the Security State Decoration

Reset the decoration's animation if it's hidden

BUG=653602

Review-Url: https://codereview.chromium.org/2408253002
Cr-Commit-Position: refs/heads/master@{#425378}

Former-commit-id: 8ae400d406c3a7e3fb08b47256d4d54fb60fc555